--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
+    "tabs",
+    "activeTab"
   ]
 }
