--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 2,
-
   "name": "lessandmore",
   "description": "Convert an article to show less of what you don't want and more of what you do.",
   "version": "1.0",
-
   "browser_action": {
     "default_popup": "popup.html"
   },
   "permissions": [
     "tabs",
     "activeTab"
-  ]
+  ],
+  "content_scripts": [{
+    "matches": ["http://*/*", "https://*/*"],
+    "js": ["jquery.min.js"]
+  }]
 }
